--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</header>
 		<header class="presentation">
 			<div>
-				<p class="presentation-logo">Homepage</p>
+				<a href="index.html"><img src="images/logo.png" id="logo"></a>
 				<p class="presentation-text">Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
 			</div>
 		</header>
