Refactor header and presentation sections in index.html

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body class="body">		
-		<header id='navigation'> 
+		<header> 
 			<nav class="navbar navbar-expand-lg navbar-dark">
 				<div class="container-fluid">
-					<a class="logo" href="index.html">My Homepage</a>
+					<a class="logo" href="index.html">Home</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
     				</button>
 					<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
 						<div class="navbar-nav">
-							<a class="nav-link active" aria-current="index.html" href="#">Home</a>
 							<a class="nav-link active" href="books.html">Books</a>
 							<a class="nav-link active" href="#">Argentina</a>
 							<a class="nav-link active" href="http://www.google.com">Games</a>
@@ -27,10 +26,12 @@
 				</div>
 			</nav>
 		</header>
-		<header class="presentation">
+		<header">
 			<div>
-				<a href="index.html"><img src="images/logo.png" id="presentation_logo"></a>
-				<p class="presentation-text">Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
+				<div class="presentation">
+					<a href="index.html"><img src="images/Image by Eugene from Pixabay.png"></a>
+					<p>Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
+				</div>
 			</div>
 		</header>
 		<div class="index_books">
