--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
     				</button>
-					<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
+					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 						<div class="navbar-nav">
 							<a class="nav-link active" href="books.html">Books</a>
 							<a class="nav-link active" href="#">Argentina</a>
@@ -26,21 +26,13 @@
 				</div>
 			</nav>
 		</header>
-		<header">
-			<div>
-				<div class="presentation">
-					<a href="index.html"><img src="images/Image by Eugene from Pixabay.png"></a>
-					<p>Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
-				</div>
-			</div>
-		</header>
+		<div class="presentation">
+			<a href="index.html"><img src="images/Image by Eugene from Pixabay.png"></a>
+			<p>Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
+		</div>
 		<div class="index_books">
-			<div>
 				<a href="books.html"><img src="images/Image by Wolfgang Eckert from Pixabay.png"></a>
-			</div>
-			<div>
-				<p>These are some books from Argentinian autors I like and recommend.</p> <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-			</div>
+				<p>These are some books from Argentinian autors I like and recommend.<br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 		</div>
 		<div class="games">
 			<div>
