--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+	    <meta charset="utf-8">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 		<link href="style.css" rel="stylesheet">
 		<!-- gives the browser instructions on how to control the page's dimensions and scaling -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,21 +26,52 @@
 				</div>
 			</nav>
 		</header>
-		<div class="presentation">
-			<a href="index.html"><img src="images/Image by Eugene from Pixabay.png"></a>
-			<p>Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
+
+		<div class="container-fluid px-0">
+			<div class="presentation">
+				<img src="images/forest-7774205_1920Image by Almeida from Pixabay.jpg">
+				<p>Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
+			</div>
 		</div>
-		<div class="index_books">
-				<a href="books.html"><img src="images/Image by Wolfgang Eckert from Pixabay.png"></a>
-				<p>These are some books from Argentinian autors I like and recommend.<br> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+		<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="images/book-2598916_1920 Image by StockSnap from Pixabay.jpg" class="d-block w-100">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Favourite Books</h5>
+					</div>
+				</div>
+				<div class="carousel-item" .active>
+					<img src="images/a-book-2598594_1920 Image by fotografierende from Pixabay.jpg" class="d-block w-100">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Second slide label</h5>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<a href="books.html"> 
+						<img src="images/milky-way-2695569_1920Image by Felix Mittermeier from Pixabay.jpg" class="d-block w-100">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Third slide label</h5>
+						</div>
+					</a>
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-		<div class="games">
-			<div>
-				<img src="images/video games/space-invaders Image by Sergei Tokmakov, Esq. httpsTerms.Law from Pixabay.jpg" width="350px">
-			</div>
-			<div>
-				<p>These are some games I like and recommend.</p> <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-			</div>
-			</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>	
 	</body>
 </html>
