--- a/index.html
+++ b/index.html
@@ -1,77 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	    <meta charset="utf-8">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>	
 		<link href="style.css" rel="stylesheet">
-		<!-- gives the browser instructions on how to control the page's dimensions and scaling -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
 	</head>
-	<body class="body">		
+	<body class="body">	
+
+		<!-- Bootstrap navigation bar -->	
 		<header> 
 			<nav class="navbar navbar-expand-lg navbar-dark">
-				<div class="container-fluid">
-					<a class="logo" href="index.html">Home</a>
+					<a class="navbar-brand" href="index.html">Home</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
     				</button>
 					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 						<div class="navbar-nav">
-							<a class="nav-link active" href="books.html">Books</a>
-							<a class="nav-link active" href="#">Argentina</a>
-							<a class="nav-link active" href="http://www.google.com">Games</a>
+							<a class="nav-link active" href="godot.html">Godot</a>
+							<a class="nav-link active" href="assets.html">Assets</a>
+							<a class="nav-link active" href="game.html">Game</a>
 						</div>
 					</div>
 				</div>
 			</nav>
 		</header>
 
-		<div class="container-fluid px-0">
-			<div class="presentation">
-				<img src="images/forest-7774205_1920Image by Almeida from Pixabay.jpg">
-				<p>Hi there! My name is homepage and I'm from Argentina. My hobbies are these and these, and I'm taking this course to have some tools for making video games</p>
+		<!-- Main -->
+		<main class="assets_main">
+			<header class="godot_header">
+					<h1>Game Assets</h1>
+					<h5>These are some of the graphical assets used in the game, and credits to the artists that made them.</h5>
+			</header>
+			<hr>
+			<div>
+				<p style="margin: 2%">Lorem ipsum dolor sit amet consectetur adipiscing, elit ligula aliquet habitasse auctor potenti, nulla enim cursus tristique fringilla. Habitant senectus placerat augue lobortis neque faucibus feugiat suscipit sapien, lectus primis bibendum penatibus sed justo tristique taciti, ac volutpat eros tempor litora natoque dictumst porttitor. Cras platea risus magnis elementum dapibus a erat leo etiam auctor venenatis ultricies, massa himenaeos magna ad nibh pretium proin vehicula nisi parturient.</p>
+				<hr>
 			</div>
-		</div>
-
-		<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			<div class="assets_content">
+				<div>
+					<h3>Player Character</h3>
+					<img id="animation_character" src="images/character_idle.gif"  alt="Animated player character" style="height: 30vh;">
+					<br>
+					<button class="btn btn-primary" id="character_run">run</button>
+					<button class="btn btn-primary" id="character_idle">idle</button>
+					<button class="btn btn-primary" id="character_attack">attack</button>
+					<h5>Artist: Ventilatore<br>https://ventilatore.itch.io/</h5>
+				</div>
+				<hr>
 			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="images/book-2598916_1920 Image by StockSnap from Pixabay.jpg" class="d-block w-100">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Favourite Books</h5>
-					</div>
+			<div class="assets_content">
+				<div>
+					<h3>Structure</h3>
+					<img id="character_animation" src="images/structure.gif"  alt="Animated structure" style="height: 50vh;">
+					<br>
+					<h5>Artist: Papoy Core<br>https://papoycore.itch.io/</h5>
 				</div>
-				<div class="carousel-item" .active>
-					<img src="images/a-book-2598594_1920 Image by fotografierende from Pixabay.jpg" class="d-block w-100">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Second slide label</h5>
-					</div>
+				<hr>
+			</div>
+			<div class="assets_content">
+				<div>
+					<h3>Enemy</h3>
+					<img id="animation_slime" src="images/slime_idle.gif"  alt="Animated slime enemy" style="height: 30vh;">
+					<br>
+					<button class="btn btn-primary" id="slime_left">run left</button>
+					<button class="btn btn-primary" id="slime_idle">idle</button>
+					<button class="btn btn-primary" id="slime_attack">attack</button>
+					<button class="btn btn-primary" id="slime_right">run right</button>
+					<h5>Source: https://craftpix.net</h5>
 				</div>
-				<div class="carousel-item">
-					<a href="books.html"> 
-						<img src="images/milky-way-2695569_1920Image by Felix Mittermeier from Pixabay.jpg" class="d-block w-100">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Third slide label</h5>
-						</div>
+				<hr>
+			</div>
+			<div class="assets_content">
+				<div>
+					<h3>Map tileset</h3>
+					<br>
+					<a href="image_01.html">
+						<img src="images/terrain_tiles.png"  alt="Terrain tileset" style="height: 40vh;">
 					</a>
+					<a href="image_02.html">
+						<img src="images/county_tileset.gif"  alt="Animated pond" style="height: 40vh;">
+					</a>
+					<a href="image_03.html">
+						<img src="images/objects.png"  alt="Objects tileset" style="height: 40vh;">
+					</a>
+					<br>
+					<h5>Artist: schwarnhild<br>https://schwarnhild.itch.io/</h5>
 				</div>
+				<hr>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
+			<div class="assets_content">
+				<div>
+					<h3>Music</h3>
+					<audio controls>
+  						<source src="images/cottagecore - by lindseysewell from freesound_community from Pixabay.mp3" type="audio/mp3">
+					</audio>
+					<h5>Artist: lindseysewell<br>freesound_community from Pixabay</h5>
+				</div>
+				<hr>
+			</div>
+		</main>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>	
+		<!-- Footer -->
+		<div class="footer">
+			<div>
+			</div>
+			<div>
+				<p>manuelg25011@gmail.com</p>
+				<p style="font-size: 12px">© 2025 Manuel Giommetti</p>
+			</div> 
+			<div>
+				<button type="button" onclick="topFunction()" class="btn btn-outline-primary">Back to top</button>
+			</div>
+		</div>
+		
+		<!-- Script -->
+		<script>
+			// Change gifs animations
+			let animation = document.querySelector("#animation_character"); 
+			let animation_slime = document.querySelector("#animation_slime"); 
+			let attack_sound = new Audio('images/slash.mp3');
+			let slime_move_sound = new Audio('images/slime_sound.mp3');
+
+			document.querySelector('#character_run').onclick = function() {
+				animation.src = "images/character_run.gif";
+			}
+			document.querySelector('#character_idle').onclick = function() {
+				animation.src = "images/character_idle.gif";
+			}
+				document.querySelector('#character_attack').onclick = function() {
+				animation.src = "images/character_attack.gif";
+				attack_sound.play();
+			}
+			
+			document.querySelector('#slime_idle').onclick = function() {
+				animation_slime.src = "images/slime_idle.gif";
+			}
+			document.querySelector('#slime_attack').onclick = function() {
+				animation_slime.src = "images/slime_attack.gif";
+			}
+					document.querySelector('#slime_left').onclick = function() {
+				animation_slime.src = "images/slime_left.gif";
+				slime_move_sound.play();
+			}
+					document.querySelector('#slime_right').onclick = function() {
+				animation_slime.src = "images/slime_right.gif";
+				slime_move_sound.play();
+			}
+
+			// Back to top button
+			function topFunction() {
+				document.documentElement.scrollTop = 0;
+			}	
+		</script>
 	</body>
 </html>
