Add webm source to video in game.html
Added a webm source for the video element.

--- a/game.html
+++ b/game.html
@@ -42,6 +42,7 @@
 			<div class="game_content">
 				<video width="1280" height="720" controls>
 					<source src="images/mov.mp4" type="video/mp4">
+					<source src="images/mov.webm">
 				</video>
 			</div>
 			<hr>
@@ -69,3 +70,4 @@
 	</body>
 
 </html>
+
